# Lielab

./: .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  Lielab.hpp  README.md  conanfile.py  conanfile.txt
.github/workflows/: build_wheels.yml  python_wheels.yml  test_cpp.yml
Lielab/: __release__.hpp  domain.hpp  functions.hpp  integrate.hpp  kinematics_extra.hpp  topos.hpp  topos_extra.hpp  transform_extra.hpp  utils.hpp
Lielab/abstract/: abstract_all.hpp
Lielab/constants/: constants_all.hpp
Lielab/domain/: CompositeAlgebra.hpp  CompositeManifold.hpp  Errorx.hpp  README.md  domain_extra.hpp  liealgebras.hpp  liegroups.hpp  lieiii.hpp  operators.hpp  smoothmanifolds.hpp
Lielab/domain/liealgebras/: CompositeAlgebra.cpp  CompositeAlgebra.hpp  LieAlgebra.cpp  LieAlgebra.hpp  LieAlgebra.tpp  cn.cpp  cn.hpp  cn.tpp  gl.hpp  glc.cpp  glc.hpp  glc.tpp  glr.cpp  glr.hpp  glr.tpp  rn.cpp  rn.hpp  rn.tpp  se.cpp  se.hpp  se.tpp  so.cpp  so.hpp  so.tpp  sp.cpp  sp.hpp  sp.tpp  su.cpp  su.hpp  su.tpp
Lielab/domain/liegroups/: CN.cpp  CN.hpp  CN.tpp  CompositeGroup.cpp  CompositeGroup.hpp  GL.hpp  GLC.cpp  GLC.hpp  GLC.tpp  GLR.cpp  GLR.hpp  GLR.tpp  LieGroup.hpp  LieGroup.tpp  RN.cpp  RN.hpp  RN.tpp  SE.cpp  SE.hpp  SE.tpp  SO.cpp  SO.hpp  SO.tpp  SP.cpp  SP.hpp  SP.tpp  SU.cpp  SU.hpp  SU.tpp
Lielab/domain/smoothmanifolds/: CompositeManifold.cpp  CompositeManifold.hpp  GrR.cpp  GrR.hpp  GrR.tpp
Lielab/functions/: Ad.cpp  Ad.hpp  Ad.tpp  Cayley.cpp  Cayley.hpp  Cayley.tpp  Killing.hpp  Killing.tpp  Killingform.hpp  README.md  actions.cpp  actions.hpp  bernoulli.cpp  bernoulli.hpp  cayley1.hpp  cayley2.hpp  coAd.hpp  commutator.cpp  commutator.hpp  commutator.tpp  copair.hpp  dcayley1inv.hpp  derivative.cpp  derivative.hpp  dexp.cpp  dexp.hpp  dexp.tpp  dexpinv.cpp  dexpinv.hpp  dexpinv.tpp  dlog.hpp  dlog.tpp  exp.cpp  exp.hpp  exp.tpp  functions_extra.hpp  littlead.cpp  littlead.hpp  littlead.tpp  littlecoad.hpp  (+6 more)
Lielab/integrate/: Coefficients.cpp  Coefficients.hpp  IVPMethods.hpp  ODESolution.cpp  ODESolution.hpp  README.md  solve_ivp.cpp  solve_ivp.hpp  solve_ivp.tpp
Lielab/integrate/IVPMethods/: IVPSettings.cpp  IVPSettings.hpp  RungeKutta.cpp  RungeKutta.hpp
Lielab/topos/: rk_methods.hpp  topos_functions.hpp
Lielab/topos/functions/: Ad.hpp  cayley1.hpp  dcayley1inv.hpp  dexp.hpp  dexpinv.hpp  exp.hpp  log.hpp
Lielab/utils/: Error.cpp  Error.hpp  Errorx.hpp  eigentools.cpp  eigentools.hpp  eigentools.tpp  factorial.cpp  factorial.hpp  golden.cpp  golden.hpp  newton.cpp  newton.hpp
doc/: docstringtemplate.txt
lielab/: __release__.hpp  __release__.hpp.in  abstract.hpp  constants.hpp  domain  dynamics.hpp  functions  functions.hpp  kinematics.hpp  lielab  lielab.hpp  lielab_extra.hpp  optim.hpp  optim_extra.hpp  topos  topos.hpp  transform.hpp  transform_extra.hpp  utils.hpp
lielab/domain/: CompositeAlgebra.hpp  CompositeManifold.hpp
lielab/domain/liealgebras/: gl.hpp  rn.hpp  se.hpp  so.hpp  sp.hpp
lielab/domain/liegroups/: SO.hpp  SP.hpp
lielab/functions/: Killing.hpp  bernoulli.hpp  cayley1.hpp  coAd.hpp  copair.hpp  exp.hpp  factorial.hpp  log.hpp  pair.hpp
lielab/src/domain/: domain.hpp  halie.hpp  (+2 more)
lielab/topos/: topos_functions.hpp
python/: CMakeLists.txt  MANIFEST.in  cppLielab.cpp  pyLielab.cpp  pydomain.cpp  pydomain.hpp  pyfunctions.cpp  pyfunctions.hpp  pyintegrate.cpp  pyintegrate.hpp  pyutils.cpp  pyutils.hpp  setup.py
python/lielab/: __init__.py
python/lielab/domain/: __init__.py
python/lielab/dynamics/: __init__.py
python/lielab/functions/: __init__.py  derivative.py
python/lielab/integrate/: ODESolution.py  __init__.py  solve_ivp.py
python/lielab/integrate/IVPMethods/: Coefficients.py  IVPSettings.py  RungeKutta.py  __init__.py
python/lielab/kinematics/: __init__.py
python/lielab/optim/: __init__.py  optim.py
python/lielab/testing/: test_main.py
python/lielab/topos/: __init__.py  topos.py
python/lielab/transform/: __init__.py
python/lielab/utils/: __init__.py  utils.py
python/tests/domain/: test_domain.py
python/tests/domain/liealgebras/: test_CompositeAlgebra.py  test_cn.py  test_glc.py  test_glr.py  test_rn.py  test_se.py  test_so.py  test_sp.py  test_su.py
python/tests/domain/liegroups/: test_CN.py  test_CompositeGroup.py  test_GLC.py  test_GLR.py  test_RN.py  test_SE.py  test_SO.py  test_SO_extra.py  test_SP.py  test_SU.py  test_SU_extra.py
python/tests/domain/liegroups/SO/: test_from_eulerangles.py
python/tests/domain/liegroups/SU/: test_SU_from_quaternion.py
python/tests/domain/smoothmanifolds/: test_CompositeManifold.py
python/tests/domain/tests/: test_domain.py
python/tests/dynamics/tests/: test_dynamics.py
python/tests/functions/: test_Ad.py  test_Cayley.py  test_Killing.py  test_dexp.py  test_dexpinv.py  test_exp.py  test_log.py
python/tests/functions/tests/: test_functions.py
python/tests/integrate/: test_solve_ivp.py
python/tests/optim/tests/: test_optim.py
python/tests/topos/tests/: test_topos.py
python/tests/transform/tests/: test_transform.py
python/tests/utils/: test_eigentools.py  test_utils.py
tests/: CMakeLists.txt  test_domain.cpp  test_dynamics.cpp  test_functions.cpp  test_lielab.cpp  test_main.cpp  test_optim.cpp  test_topos.cpp  test_transform.cpp  test_utils.cpp  test_utils.hpp  test_utils.tpp
tests/domain/liealgebras/: test_CompositeAlgebra.cpp  test_cn.cpp  test_glc.cpp  test_glr.cpp  test_rn.cpp  test_se.cpp  test_so.cpp  test_sp.cpp  test_su.cpp
tests/domain/liegroups/: test_CN.cpp  test_CompositeGroup.cpp  test_GLC.cpp  test_GLR.cpp  test_RN.cpp  test_SE.cpp  test_SO.cpp  test_SO_extra.cpp  test_SP.cpp  test_SU.cpp  test_SU_extra.cpp
tests/domain/liegroups/SO/: test_from_eulerangles.cpp
tests/domain/liegroups/SU/: test_SU_from_quaternion.cpp
tests/domain/smoothmanifolds/: test_CompositeManifold.cpp
tests/functions/: test_Ad.cpp  test_Cayley.cpp  test_Killing.cpp  test_actions.cpp  test_dexp.cpp  test_dexpinv.cpp  test_exp.cpp  test_log.cpp
tests/integrate/: test_solve_ivp.cpp
tests/utils/: test_eigentools.cpp  test_utils.cpp
(+79 files in other folders)
